FIX z-index was putting solved text above composer

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -14,7 +14,7 @@
   display: inline-block;
   font-size: inherit;
   margin-right: -3px;
-  z-index: 999;
+  z-index: 2;
 }
 
 // you can style accepted answers however your want
